--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -14,6 +14,8 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-X8NQQmzVQbS/yvEXEGhe8+56h3V/wEX2i4l7vxD/hpklV9EFOD/1fQ/QPpjw2uYQ" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.js"></script>
   </body>
 </html>
